test/pass/optargs/optarg_verified.lily
define z(
        a: *Integer=10,
        b: *Integer=10,
        c: *Integer=10,
        d: *Integer=10,
        e: *Integer=10,
        f: *Integer=10,
        g: *Integer=10):Integer
{
    return a + b + c + d + e + f + g
}

if z()                    != 70 ||
   z(0)                   != 60 ||
   z(0, 0)                != 50 ||
   z(0, 0, 0)             != 40 ||
   z(0, 0, 0, 0)          != 30 ||
   z(0, 0, 0, 0, 0)       != 20 ||
   z(0, 0, 0, 0, 0, 0)    != 10 ||
   z(0, 0, 0, 0, 0, 0, 0) != 0:
   stderr.print("Failed")
