test/fail/optargs/optarg_too_few.lily
#[
SyntaxError: Wrong number of arguments to f (0 for 1..2).
    from optarg_too_few.lily:10:
]#

define f(a: Integer, b: *Integer = 10) {

}

f()
